cargo-features = ["edition2024"]

[package]
name = "escrow-program"
version = "0.1.0"
edition = "2024"

[lib]
name = "escrow_program"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.20"
borsh = "0.10.3"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18.20"
solana-sdk = "1.18.20"
tokio = { version = "1.35", features = ["full"] }
